# proc-macro-workshop

builder/: Cargo.toml
builder/src/: impls.rs  lib.rs
builder/src/impls/: seven.rs  six.rs
builder/tests/: progress.rs
debug/: Cargo.toml
debug/src/: impls.rs  lib.rs
debug/tests/: progress.rs
