[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2024"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.108", features = ["diff"] }

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }
proc-macro2 = "1.0.103"
